<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jorgechp.npi.practica4.PuntoExtra.MainActivity" >

    <Button
        android:id="@+id/btActivarGravedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btActivarSonometro"
        android:layout_centerVertical="true"
        android:text="@string/BT_ILUMINACION" />

    <Button
        android:id="@+id/btActivarSonometro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:text="@string/BT_SONOMETRO" />

    <Button
        android:id="@+id/btIluminacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btActivarGravedad"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:text="@string/BT_GRAVEDAD" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btActivarSonometro"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@+id/btActivarGravedad"
        android:text="@string/TW_DECIBELIOS" />

    <TextView
        android:id="@+id/tw_data_decibelios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/btActivarGravedad" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignTop="@+id/btIluminacion"
        android:text="@string/BT_X" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:text="@string/BT_Y" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:text="@string/BT_Z" />

    <TextView
        android:id="@+id/tw_data_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView1" />

    <TextView
        android:id="@+id/tw_data_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/tw_data_x" />

    <TextView
        android:id="@+id/tw_data_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/tw_data_x" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btActivarGravedad"
        android:layout_toLeftOf="@+id/tw_data_x"
        android:text="@string/TW_LUMINOSIDAD_DATSO" />

    <TextView
        android:id="@+id/tw_luminosidad_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/tw_data_x" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/tw_luminosidad_valor"
        android:text="@string/TW_LUMINOSIDAD_MAX" />

    <TextView
        android:id="@+id/tw_max_luminosidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toRightOf="@+id/tw_luminosidad_valor" />

</RelativeLayout>
